<resources>
    <string name="app_name">Submission 5</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="detail">Detail</string>
    <string name="favorite">Favorite</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="first_run">First Run</string>
    <string name="now_playing">Now Playing</string>
    <string name="upcomming">Upcomming</string>
    <string name="postermovie">Poaster Film</string>
    <string name="search">Search</string>
    <string name="release_date">Release Date</string>
    <string name="deskripsi">Description</string>
    <string name="home">Home</string>
    <string name="now_plying">Now Playing</string>
    <string name="appwidget_text">List Favorite Film</string>
    <string name="add_widget">Add widget</string>
    <string name="no_list_favorite">Tidak ada list Favorite</string>
    <string name="daily_reminder">Turn on daily reminder</string>
    <string name="release_reminder">Turn on release reminder</string>
    <string name="notification_daily">Turn on/off daily reminder</string>
    <string name="notification_every_time_there_is_a_new_film">Notification every time there is a new film</string>
    <string name="daily_message">Hey! Ready to pick your new movies today?</string>
    <string name="release_message">Today %s release</string>
    <string name="app_name_release">Submission 5 Release Today</string>
    <string name="support_language">It\'s support English, Indonesia, Russian and Korean</string>
</resources>
