<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/nav_now_plaing"
            android:title="@string/now_plying"
            android:icon="@drawable/ic_play_circle_outline_black_24dp"
            />
        <item
            android:id="@+id/nav_upcomming"
            android:title="@string/upcomming"
            android:icon="@drawable/ic_queue_play_next_black_24dp"/>
        <item
            android:id="@+id/nav_search"
            android:title="@string/search"
            android:icon="@drawable/ic_search_black_24dp"/>
        <item
            android:id="@+id/nav_favorite"
            android:title="@string/favorite"
            android:icon="@drawable/ic_favorite_black_24dp"/>

    </group>
</menu>
